[tool.poetry]
name = "google-calendar-tracker"
version = "0.1.0"
description = "A CLI tool to track and visualize Google Calendar events."
authors = ["amirR01 <your-email@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-api-python-client = "^2.0.0"
google-auth = "^2.0.0"
google-auth-oauthlib = "^1.0.0"
matplotlib = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

